2006-08-03  Brady Eidson  <beidson@apple.com>

        Reviewed by Tim Hatcher's rubber stamp
        Fixed Intel build break caused by weinig's -W change in r15781

        * WebView/WebView.m: wrapped cpu-dependent defs with defined() macro

2006-08-03  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.

        - fixed problem that could cause assertion failures in Safari
        
        * Plugins/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView loadRequest:inTarget:withNotifyData:sendNotification:]): Don't
        allow a plugin to start new loads once its document is no longer the one actively loading.

2006-08-03  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.
        
        - remove use of WebDataSource from WebLoader and subclasses, just have them talk to the
        WebFrameLoader instead. 
        
        For now this is done by forarding all the calls.

        * Misc/WebIconLoader.m:
        (-[WebIconLoader didFinishLoading]):
        * Plugins/WebNetscapePluginStream.m:
        (-[WebNetscapePluginStream initWithRequest:pluginPointer:notifyData:sendNotification:]):
        (-[WebNetscapePluginStream start]):
        (-[WebNetscapePlugInStreamLoader didFinishLoading]):
        (-[WebNetscapePlugInStreamLoader didFailWithError:]):
        (-[WebNetscapePlugInStreamLoader cancelWithError:]):
        * WebCoreSupport/WebFrameBridge.m:
        (-[WebFrameBridge startLoadingResource:withMethod:URL:customHeaders:]):
        (-[WebFrameBridge startLoadingResource:withMethod:URL:customHeaders:postData:]):
        * WebCoreSupport/WebSubresourceLoader.h:
        * WebCoreSupport/WebSubresourceLoader.m:
        (-[WebSubresourceLoader initWithLoader:frameLoader:]):
        (+[WebSubresourceLoader startLoadingResource:withRequest:customHeaders:referrer:forFrameLoader:]):
        (+[WebSubresourceLoader startLoadingResource:withMethod:URL:customHeaders:referrer:forFrameLoader:]):